@@ -8,7 +8,7 @@ from pokernetwork.pokernetworkconfig import Config
 from pokerui.pokerdisplay import PokerDisplay
 from pokerui.pokerrenderer import PokerRenderer
 from pokerui.pokerinterface import PokerInterface
-from pokernetwork.pokerpackets import PACKET_POKER_CHAT, PACKET_POKER_BOARD_CARDS, PACKET_POKER_START, PACKET_POKER_PLAYER_ARRIVE, PACKET_POKER_PLAYER_LEAVE, PACKET_POKER_PLAYER_CHIPS
+from pokernetwork.pokerpackets import PACKET_POKER_CHAT, PACKET_POKER_BOARD_CARDS, PACKET_POKER_START, PACKET_POKER_PLAYER_ARRIVE, PACKET_POKER_PLAYER_LEAVE, PACKET_POKER_PLAYER_CHIPS, PACKET_POKER_POSITION
 from pokernetwork.pokerclientpackets import PACKET_POKER_POT_CHIPS, PACKET_POKER_CHIPS_POT_RESET
 from pokerengine.pokerchips import PokerChips
 from qpokerwidget import QPokerWidget
@@ -46,6 +46,11 @@ class DummyPokerDisplay(PokerDisplay):
             self.widget.renderPot(packet.index, pots['pots'][packet.index][0])
         elif packet.type == PACKET_POKER_CHIPS_POT_RESET:
             self.widget.renderPotReset()
+        elif packet.type == PACKET_POKER_POSITION:
+            if packet.serial == 0:
+                self.widget.renderPositionReset()
+            else:
+                self.widget.renderPosition(self.serial2seat[packet.serial])
 class DummyPokerRenderer(PokerRenderer):
     def __init__(self, *args, **kwargs):
         PokerRenderer.__init__(self, *args, **kwargs)
